--- a/remote_template.html
+++ b/remote_template.html
@@ -19,7 +19,7 @@
       .item-dpp .credential-header { background: linear-gradient(to top, #ffffff, #dfebe1); }
       .badge { color: #ffffff; font-weight: 900; padding: 2px 8px; border-radius: 99px; font-size: 0.875rem; }
       .topic-group { margin-top: 15px; background: #f4f4f4; border-radius: 8px; padding: 12px; border: 1px solid #f3f4f6; }
-      .topic-header { font-size: 0.95rem; font-weight: 700; text-transform: uppercase; letter-spacing: 0.05em; color: #374151; margin-bottom: 15px; display: flex; align-items: center; gap: 6px; margin-left: auto; }
+      .topic-header { font-size: 0.95rem; font-weight: 700; text-transform: uppercase; letter-spacing: 0.05em; color: #374151; margin-bottom: 15px; display: flex; align-items: center; gap: 6px; }
       .larger { font-size: 1.25rem; font-weight: 700; }
       .item-dpp .topic-header { border-left: 3px solid var(--dpp-primary); padding-left: 8px; }
       .topic-group .data-row { margin-bottom: 6px; }
@@ -48,7 +48,7 @@
       .truncate-row { white-space: nowrap; overflow: hidden; text-overflow: ellipsis; display: block; width: 100%; }
       #download-btn { background: transparent; color: ##688276; border: 1px solid ##688276; padding: 2px 8px; font-size: 0.6rem; text-transform: uppercase; border-radius: 0; transition: 0.2s; align-self: flex-end; margin-bottom: 12px; margin-left: 8px; }
       #download-btn:hover { background: var(--dpp-primary); color: #fff; }
-      #view-btn { background: transparent; color: ##688276; border: 1px solid ##688276; padding: 2px 8px; font-size: 0.6rem; text-transform: uppercase; border-radius: 0; transition: 0.2s; align-self: flex-end; margin-bottom: 12px; }
+      #view-btn { background: transparent; color: ##688276; border: 1px solid ##688276; padding: 2px 8px; font-size: 0.6rem; text-transform: uppercase; border-radius: 0; transition: 0.2s; align-self: flex-end; margin-bottom: 12px; margin-left: auto; }
       #view-btn:hover { background: var(--dpp-primary); color: #fff; }
     </style>    
     <title>Digital Product Passport</title>
