--- a/remote_template.html
+++ b/remote_template.html
@@ -46,9 +46,9 @@
       .data-row.nested .label { flex: 0 0 calc(40% - 25px); font-size: 0.9rem; }
       .data-row.nested .value { flex: 0 0 60%; font-size: 1.125rem; font-weight: 500; }
       .truncate-row { white-space: nowrap; overflow: hidden; text-overflow: ellipsis; display: block; width: 100%; }
-      #download-btn { background: transparent; color: ##688276; border: 1px solid ##688276; padding: 2px 8px; font-size: 0.6rem; text-transform: uppercase; border-radius: 0; transition: 0.2s; align-self: flex-end; margin-bottom: 12px; margin-left: 8px; }
+      #download-btn { background: transparent; color: #688276; border: 1px solid #688276; padding: 2px 8px; font-size: 0.6rem; text-transform: uppercase; border-radius: 0; transition: 0.2s; align-self: flex-end; margin-bottom: 12px; margin-left: 8px; }
       #download-btn:hover { background: var(--dpp-primary); color: #fff; }
-      #view-btn { background: transparent; color: ##688276; border: 1px solid ##688276; padding: 2px 8px; font-size: 0.6rem; text-transform: uppercase; border-radius: 0; transition: 0.2s; align-self: flex-end; margin-bottom: 12px; margin-left: auto; }
+      #view-btn { background: transparent; color: #688276; border: 1px solid #688276; padding: 2px 8px; font-size: 0.6rem; text-transform: uppercase; border-radius: 0; transition: 0.2s; align-self: flex-end; margin-bottom: 12px; margin-left: auto; }
       #view-btn:hover { background: var(--dpp-primary); color: #fff; }
     </style>    
     <title>Digital Product Passport</title>
