--- a/remote_template.html
+++ b/remote_template.html
@@ -273,7 +273,7 @@
         <div class="topic-group">
           <div class="topic-header">Sustainability metrics</div>
           <div class="data-row">
-            <span class="label">Global Warming Potential (Total)</span>
+            <span class="label">GWP (total)</span>
             <span class="value">4.2 tCO2e</span>
           </div>
           <div class="data-row">
