--- a/remote_template.html
+++ b/remote_template.html
@@ -38,8 +38,8 @@
       .score-container { display: flex; flex-direction: column; align-items: flex-end; width: 100%; margin-top: 2px; margin-bottom: 2px;}
       .score-track { width: 30%; height: 8px; background: #e5e7eb; border-radius: 4px; overflow: hidden; position: relative; }
       .score-fill { height: 100%; border-radius: 4px; transition: width 0.5s ease-in-out; }
-      .external-link { color: #2563eb; text-decoration: none; font-weight: 500; display: inline-flex; align-items: center; gap: 4px; border-bottom: 1px solid transparent; transition: all 0.2s ease; font-size: 0.85rem; }
-      .external-link:hover { border-bottom: 1px solid #2563eb; color: #1d4ed8; }
+      .external-link { color: var(--dpp-primary); text-decoration: none; font-weight: 500; display: inline-flex; align-items: center; gap: 4px; border-bottom: 1px solid transparent; transition: all 0.2s ease; font-size: 0.85rem; }
+      .external-link:hover { border-bottom: 1px solid var(--dpp-primary); }
       .external-link::after { content: '↗'; font-size: 1rem; font-weight: bold; }
       .item-anchor .external-link { font-family: var(--font-mono); font-size: 0.95rem; }
       .data-row.nested { margin-left: 15px; }
