--- a/remote_template.html
+++ b/remote_template.html
@@ -57,7 +57,7 @@
 
     <article class="credential-card item-dpp">
       <div class="credential-header">
-        <strong>DIGITAL PRODUCT PASSPORT</strong>
+        <strong>DIGITAL PRODUCT PASSPORT x</strong>
       </div>
 
       <div class="credential-body">
