--- a/remote_template.html
+++ b/remote_template.html
@@ -5,7 +5,7 @@
       .revoked-badge, .hazardous-badge, .score-low { background: #ef4444; }
       .unknown-badge, .score-mid { background: #f59e0b; }
       body { margin: 0; padding: 0; min-height: 100vh; display: flex; justify-content: center; align-items: center; background-color: #f3f4f6; }
-      .card-viewer { display: flex; flex-direction: row; gap: 24px; flex-wrap: wrap; justify-content: center; padding: 20px; box-sizing: border-box; width: 100%; max-width: 900px; }
+      .card-viewer { display: flex; flex-direction: column; align-items: center;  gap: 20px; width: 100%; max-width: 900px; padding: 10px; box-sizing: border-box; }
       .credential-card { font-family: var(--font-main); width: clamp(280px, 95%, 640px); background: #ffffff; border-radius: var(--radius); border: 1px solid #e5e7eb; box-shadow: var(--shadow); overflow: hidden; position: relative; transition: transform 0.2s ease; flex-shrink: 1; flex-grow: 0; margin: 10px auto; box-sizing: border-box; }
       .credential-header { padding: 16px 20px; display: flex; align-items: center; gap: 12px; border-bottom: 1px solid #f3f4f6; }
       .item-dpp .credential-header::before { content: '♻️'; font-size: 2.25rem; }
