--- a/remote_template.html
+++ b/remote_template.html
@@ -35,9 +35,9 @@
       .score-container { display: flex; flex-direction: column; align-items: flex-end; width: 100%; margin-top: 2px; margin-bottom: 2px;}
       .score-track { width: 30%; height: 8px; background: #e5e7eb; border-radius: 4px; overflow: hidden; position: relative; }
       .score-fill { height: 100%; border-radius: 4px; transition: width 0.5s ease-in-out; }
-      .external-link { color: var(--dpp-primary); text-decoration: none; font-weight: 500; display: inline-flex; align-items: center; gap: 4px; border-bottom: 1px solid transparent; transition: all 0.2s ease; font-size: 0.85rem; }
-      .external-link:hover { border-bottom: 1px solid var(--dpp-primary); }
-      .external-link::after { content: '↗'; font-size: 1rem; font-weight: bold; }
+.external-link { color: var(--dpp-primary); text-decoration: none; font-weight: 500; font-size: 0.85rem; background: #f0fdf4; padding: 2px 6px; border-radius: 4px; display: inline; line-height: 1.8; transition: all 0.2s ease; box-decoration-break: clone; -webkit-box-decoration-break: clone; }
+.external-link:hover { background: #dcfce7; color: #065f46; }
+.external-link::after { content: '\00a0↗'; font-weight: bold; white-space: nowrap; }
       .item-anchor .external-link { font-family: var(--font-mono); font-size: 0.95rem; }
       .data-row.nested { margin-left: 15px; }
       .data-row.nested .label { flex: 0 0 calc(40% - 25px); font-size: 0.9rem; }
