--- a/remote_template.html
+++ b/remote_template.html
@@ -46,10 +46,11 @@ t Data    <style>
       .dot { height: 10px; width: 10px; border-radius: 50%; display: inline-block; margin-right: 5px; }
       .status-text { font-size: 0.85rem; font-weight: 600; text-transform: uppercase; }
       
-      .claim-card { background: #f9fafb; border: 1px solid #e5e7eb; border-radius: 8px; padding: 12px; margin-bottom: 12px; }
-      .claim-meta { display: flex; justify-content: space-between; align-items: flex-start; margin-bottom: 10px; border-bottom: 1px dashed #d1d5db; padding-bottom: 8px; }
-      .nested-metrics { display: grid; grid-template-columns: 1fr 1fr; gap: 8px; margin-top: 8px; }
-      .metric-pill { background: #ffffff; border: 1px solid #e5e7eb; padding: 6px 10px; border-radius: 6px; font-size: 0.8rem; display: flex; flex-direction: column; }
+.claim-card { background: #f9fafb; border: 1px solid #e5e7eb; border-radius: 8px; padding: 12px; margin-bottom: 12px; }
+.claim-meta { display: flex; justify-content: space-between; align-items: flex-start; margin-bottom: 10px; border-bottom: 1px dashed #d1d5db; padding-bottom: 8px; }
+.nested-metrics { display: grid; grid-template-columns: 1fr 1fr; gap: 8px; margin-top: 8px; }
+.metric-pill { background: #ffffff; border: 1px solid #e5e7eb; padding: 6px 10px; border-radius: 6px; font-size: 0.8rem; display: flex; flex-direction: column; }
+.metric-label { font-weight: 700; text-transform: uppercase; font-size: 0.7rem; margin-bottom: 2px; }
     </style>    
  
     <div class="card-viewer">
@@ -309,7 +310,7 @@ t Data    <style>
   <div class="claim-card">
     <div class="claim-meta">
       <div style="flex: 1;">
-        <div style="font-size: 0.75rem; color: #6b7280; text-transform: uppercase;">{{conformityTopic}}</div>
+        <div style="font-size: 0.75rem; color: #6b7280; text-transform: uppercase;">{{formatTopic conformityTopic}}</div>
         <div style="font-weight: 700; color: #111827; font-size: 1rem; line-height: 1.2;">{{referenceStandard.name}}</div>
       </div>
       <div style="text-align: right; flex-shrink: 0;">
@@ -326,7 +327,7 @@ t Data    <style>
       <div class="metric-pill">
         <span class="metric-label" style="color: var(--dpp-primary);">Declared Metric</span>
         <span style="font-weight: 600;">{{metricName}}</span>
-        <span><strong>{{metricValue.value}}</strong> {{#if (ne metricValue.unit "NIL")}}{{metricValue.unit}}{{/if}}</span>
+        <span><strong>{{metricValue.value}}</strong> {{metricValue.unit}}</span>
       </div>
       {{/each}}
 
@@ -335,7 +336,7 @@ t Data    <style>
         <div class="metric-pill" style="border-left: 3px solid var(--dcc-primary);">
           <span class="metric-label" style="color: var(--dcc-primary);">Assessment Limit</span>
           <span style="font-weight: 600;">{{metricName}}</span>
-          <span><strong>{{metricValue.value}}</strong></span>
+          <span><strong>{{metricValue.value}}</strong> {{metricValue.unit}}</span>
         </div>
         {{/each}}
       {{/each}}
