--- a/remote_template.html
+++ b/remote_template.html
@@ -310,7 +310,7 @@ t Data    <style>
   <div class="claim-card">
     <div class="claim-meta">
       <div style="flex: 1;">
-        <div style="font-size: 0.75rem; color: #6b7280; text-transform: uppercase;">{{formatTopic conformityTopic}}</div>
+        <div style="font-size: 0.75rem; color: #6b7280; text-transform: uppercase;">{{conformityTopic}}</div>
         <div style="font-weight: 700; color: #111827; font-size: 1rem; line-height: 1.2;">{{referenceStandard.name}}</div>
       </div>
       <div style="text-align: right; flex-shrink: 0;">
