--- a/remote_template.html
+++ b/remote_template.html
@@ -1,4 +1,4 @@
-t Data    <style>
+<style>
       :root { --font-main: 'Inter', -apple-system, sans-serif; --font-mono: 'JetBrains Mono', 'Fira Code', monospace; --radius: 12px; --shadow: 0 4px 20px rgba(0, 0, 0, 0.08); --dpp-primary: #10b981; --dcc-primary: #3b82f6; --dia-primary: #64748b; }
       .verified-badge, .safe-badge, .score-high { background: var(--dpp-primary); }
       .revoked-badge, .hazardous-badge, .score-low { background: #ef4444; }
