--- a/remote_template.html
+++ b/remote_template.html
@@ -45,6 +45,17 @@
       .truncate-row { white-space: nowrap; overflow: hidden; text-overflow: ellipsis; display: block; width: 100%; }
       .dot { height: 10px; width: 10px; border-radius: 50%; display: inline-block; margin-right: 5px; }
       .status-text { font-size: 0.85rem; font-weight: 600; text-transform: uppercase; }
+
+.claim-info { flex: 1; }
+.status-container { text-align: right; flex-shrink: 0; }
+.topic-label { font-size: 0.75rem; color: #6b7280; text-transform: uppercase; }
+.standard-name { font-weight: 700; color: #111827; font-size: 1rem; line-height: 1.2; }
+.metric-name { font-weight: 600; font-size: 0.85rem; }
+.metric-val { font-size: 1rem; }
+.primary-label { color: var(--dpp-primary); }
+.criterion-pill { border-left: 3px solid var(--dcc-primary); }
+.criterion-label { color: var(--dcc-primary); }
+.criterion-link { color: var(--dcc-primary); }
       
 .claim-card { background: #f9fafb; border: 1px solid #e5e7eb; border-radius: 8px; padding: 12px; margin-bottom: 12px; }
 .claim-meta { display: flex; justify-content: space-between; align-items: flex-start; margin-bottom: 10px; border-bottom: 1px dashed #d1d5db; padding-bottom: 8px; }
@@ -319,11 +330,11 @@
   {{#each credentialSubject.conformityClaim}}
   <div class="claim-card">
     <div class="claim-meta">
-      <div style="flex: 1;">
-        <div style="font-size: 0.75rem; color: #6b7280; text-transform: uppercase;">{{conformityTopic}}</div>
-        <div style="font-weight: 700; color: #111827; font-size: 1rem; line-height: 1.2;">{{referenceStandard.name}}</div>
+      <div class="claim-info">
+        <div class="topic-label">{{conformityTopic}}</div>
+        <div class="standard-name">{{referenceStandard.name}}</div>
       </div>
-      <div style="text-align: right; flex-shrink: 0;">
+      <div class="status-container">
         {{#if conformance}}
           <span class="badge safe-badge">CONFORMANT</span>
         {{else}}
@@ -335,10 +346,10 @@
     <div class="nested-metrics">
       {{#each declaredValue}}
       <div class="metric-pill">
-        <div>
-          <span class="metric-label" style="color: var(--dpp-primary);">Declared Metric</span>
-          <div style="font-weight: 600; font-size: 0.85rem;">{{metricName}}</div>
-          <div style="font-size: 1rem;"><strong>{{metricValue.value}}</strong> {{metricValue.unit}}</div>
+        <div class="metric-details">
+          <span class="metric-label primary-label">Declared Metric</span>
+          <div class="metric-name">{{metricName}}</div>
+          <div class="metric-val"><strong>{{metricValue.value}}</strong> {{metricValue.unit}}</div>
         </div>
         
         {{#if ../conformityEvidence.linkURL}}
@@ -351,15 +362,15 @@
 
       {{#each assessmentCriteria}}
         {{#each thresholdValue}}
-        <div class="metric-pill" style="border-left: 3px solid var(--dcc-primary);">
-          <div>
-            <span class="metric-label" style="color: var(--dcc-primary);">Assessment Limit</span>
-            <div style="font-weight: 600; font-size: 0.85rem;">{{metricName}}</div>
-            <div style="font-size: 1rem;"><strong>{{metricValue.value}}</strong> {{metricValue.unit}}</div>
+        <div class="metric-pill criterion-pill">
+          <div class="metric-details">
+            <span class="metric-label criterion-label">Assessment Limit</span>
+            <div class="metric-name">{{metricName}}</div>
+            <div class="metric-val"><strong>{{metricValue.value}}</strong> {{metricValue.unit}}</div>
           </div>
 
           {{#if ../id}}
-          <a href="{{../id}}" target="_blank" class="pill-link" style="color: var(--dcc-primary);">
+          <a href="{{../id}}" target="_blank" class="pill-link criterion-link">
              View Criterion Reference ↗
           </a>
           {{/if}}
@@ -371,7 +382,6 @@
   {{/each}}
 </div>
 {{/if}}
-
 
         {{#if credentialSubject.traceabilityInformation}}
             <div class="topic-group">
