--- a/remote_template.html
+++ b/remote_template.html
@@ -14,6 +14,8 @@
         display: grid;
         grid-template-columns: 250px 1fr;
         min-height: 600px;
+        max-width: 900px; 
+        margin: 0 auto;    /* Centers it on the screen */
         background: #020617;
         color: #f1f5f9;
         border-radius: 16px;
