--- a/remote_template.html
+++ b/remote_template.html
@@ -1,97 +1,26 @@
 <style>
-    :root {
-        --panel-bg: #0f172a;
-        --sidebar-bg: #1e293b;
-        --accent: #38bdf8;
-        --success: #22c55e;
-        --danger: #ef4444;
-        --text-dim: #94a3b8;
-        --border: #334155;
-    }
+    :root { --panel-bg: #0f172a; --sidebar-bg: #1e293b; --accent: #38bdf8; --success: #22c55e; --danger: #ef4444; --text-dim: #94a3b8; --border: #334155; }
 
-    .dpp-dashboard {
-        font-family: 'Inter', system-ui, sans-serif;
-        display: grid;
-        grid-template-columns: 250px 1fr;
-        min-height: 600px;
-        max-width: 900px; 
-        margin: 0 auto;    /* Centers it on the screen */
-        background: #020617;
-        color: #f1f5f9;
-        border-radius: 16px;
-        overflow: hidden;
-        border: 1px solid var(--border);
-    }
+    .dpp-dashboard { font-family: 'Inter', system-ui, sans-serif; display: grid; grid-template-columns: 250px 1fr; min-height: 600px; max-width: 900px; margin: 0 auto; background: #020617; color: #f1f5f9; border-radius: 16px; overflow: hidden; border: 1px solid var(--border); }
 
     /* Left Side Navigation/Identity */
-    .dpp-sidebar {
-        background: var(--sidebar-bg);
-        padding: 30px 20px;
-        border-right: 1px solid var(--border);
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-    }
-
-    .sidebar-img { 
-        width: 100%; 
-        aspect-ratio: 1; 
-        object-fit: cover; 
-        border-radius: 12px; 
-        border: 2px solid var(--border);
-    }
-
-    .id-block {
-        background: #0f172a;
-        padding: 12px;
-        border-radius: 8px;
-        font-family: 'JetBrains Mono', monospace;
-        font-size: 0.7rem;
-        word-break: break-all;
-        color: var(--accent);
-    }
+    .dpp-sidebar { background: var(--sidebar-bg); padding: 30px 20px; border-right: 1px solid var(--border); display: flex; flex-direction: column; gap: 20px; }
+    .sidebar-img { width: 100%; aspect-ratio: 1; object-fit: cover; border-radius: 12px; border: 2px solid var(--border); }
+    .id-block { background: #0f172a; padding: 12px; border-radius: 8px; font-family: 'JetBrains Mono', monospace; font-size: 0.7rem; word-break: break-all; color: var(--accent); }
 
     /* Main Content Area */
     .dpp-content { padding: 30px; overflow-y: auto; }
-    
-    .dashboard-header {
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-end;
-        margin-bottom: 30px;
-        border-bottom: 2px solid var(--border);
-        padding-bottom: 15px;
-    }
+    .dashboard-header { display: flex; justify-content: space-between; align-items: flex-end; margin-bottom: 30px; border-bottom: 2px solid var(--border); padding-bottom: 15px; }
 
     /* Modern Grid Layout */
-    .stat-grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-        gap: 15px;
-        margin-bottom: 30px;
-    }
-
-    .stat-tile {
-        background: var(--sidebar-bg);
-        padding: 15px;
-        border-radius: 10px;
-        border: 1px solid var(--border);
-    }
-
+    .stat-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 15px; margin-bottom: 30px; }
+    .stat-tile { background: var(--sidebar-bg); padding: 15px; border-radius: 10px; border: 1px solid var(--border); }
     .tile-label { color: var(--text-dim); font-size: 0.65rem; text-transform: uppercase; letter-spacing: 1px; }
     .tile-value { font-size: 1.1rem; font-weight: 700; margin-top: 5px; display: block; }
 
     /* Tables & Lists */
-    .panel-section {
-        background: var(--sidebar-bg);
-        border-radius: 12px;
-        padding: 20px;
-        margin-bottom: 20px;
-        border: 1px solid var(--border);
-    }
-
+    .panel-section { background: var(--sidebar-bg); border-radius: 12px; padding: 20px; margin-bottom: 20px; border: 1px solid var(--border); }
     .section-title { color: var(--accent); font-size: 0.9rem; font-weight: 800; margin-bottom: 15px; text-transform: uppercase; }
-
     .data-table { width: 100%; border-collapse: collapse; font-size: 0.85rem; }
     .data-table th { text-align: left; padding: 10px; border-bottom: 2px solid var(--border); color: var(--text-dim); }
     .data-table td { padding: 12px 10px; border-bottom: 1px solid var(--border); }
@@ -103,32 +32,14 @@
     .progress-fill { height: 100%; border-radius: 3px; background: var(--accent); }
 
     /* Badges */
-    .status-pill {
-        padding: 2px 8px;
-        border-radius: 4px;
-        font-size: 0.65rem;
-        font-weight: 900;
-    }
+    .status-pill { padding: 2px 8px; border-radius: 4px; font-size: 0.65rem; font-weight: 900; }
     .pill-safe { background: rgba(34, 197, 94, 0.2); color: var(--success); border: 1px solid var(--success); }
     .pill-danger { background: rgba(239, 68, 68, 0.2); color: var(--danger); border: 1px solid var(--danger); }
 
     /* Conformity Cards */
     .conformity-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 15px; }
-    .compliance-card { 
-        background: #0f172a; 
-        padding: 15px; 
-        border-radius: 8px; 
-        border-left: 4px solid var(--accent);
-    }
-
-    .btn-action {
-        display: inline-block;
-        margin-top: 10px;
-        color: var(--accent);
-        text-decoration: none;
-        font-size: 0.75rem;
-        font-weight: 600;
-    }
+    .compliance-card { background: #0f172a; padding: 15px; border-radius: 8px; border-left: 4px solid var(--accent); }
+    .btn-action { display: inline-block; margin-top: 10px; color: var(--accent); text-decoration: none; font-size: 0.75rem; font-weight: 600; }
     .btn-action:hover { text-decoration: underline; }
 
     @media (max-width: 900px) {
